<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/planNameChat"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:gravity="center"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.611"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/chatList"
            android:layout_width="349dp"
            android:layout_height="496dp"
            android:layout_marginTop="16dp"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planNameChat" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:hint="@string/hintMessage"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chatList"
            app:layout_constraintVertical_bias="0.191" />

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="48dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/green"
            android:src="@android:drawable/ic_menu_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.304"
            app:layout_constraintStart_toEndOf="@+id/etMessage"
            app:layout_constraintTop_toBottomOf="@+id/chatList"
            app:layout_constraintVertical_bias="0.2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>