<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:backgroundTint="@color/light_green"
    tools:context=".PhoneIntroductionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/countryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:gravity="center" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:inputType="number" />

        <Button
            android:id="@+id/sendNumberButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="80dp"
            android:background="@color/green"
            android:text="@string/send_sms" />

        <TextView
            android:id="@+id/responseText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:layout_margin="60dp" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
