...
            android:gravity="center"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/type_verif_code" />

        <EditText
            android:id="@+id/smsCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:inputType="number"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/verifyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:background="@color/green"
...
