...
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="Imagen de perfil"
            android:background="@drawable/circle_background" />

        <EditText
            android:id="@+id/newUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:text="@string/register" />
...
